--- a/app/views/shared/_mypage_mypage.html.haml
+++ b/app/views/shared/_mypage_mypage.html.haml
@@ -69,7 +69,11 @@
             .mypage_mypage__content__container__container-lists__list__text
               「早い者勝ち！訳あり中禅寺湖を購入しました」取引が完了しました。
               %i.fas.fa-chevron-right.mypage_mypage__content__container__container-lists__list__text__icon
-    
+
+      =link_to new_good_path, class: 'exhibit_btn' do
+        .exhibit_btn__moji
+          出品
+        %i.fas.fa-camera
     -# ペイジャーは余力あったら作る
     %ul.mypage-history.pager
       %li.pager-prev.pager-cell 
