--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,4 +36,6 @@
 @import 'good_delete';
 @import 'good_delete_popup';
 @import 'mypage_mypage';
+@import "config/color";
+@import "modules/flash";
 
