--- a/app/views/goods/_show_goods_all.html.haml
+++ b/app/views/goods/_show_goods_all.html.haml
@@ -2,7 +2,8 @@
   .block_area__product__good-pic_price_box
     = link_to good_path(show_goods_all.id) do
       = image_tag show_goods_all.images.first.goods_picture.url, class: "goods_picture_ladies"
-    .block_area__product__good-pic_price_box__price 
-      = "¥#{show_goods_all.price}"
+      .block_area__product__good-pic_price_box__price 
+        -# = number_to_currency(unit: "￥", show_goods_all.price, precision: 0)
+        = "¥#{show_goods_all.price}"
   .block_area__product__title
     = show_goods_all.goods_name
