apply scss added scssfile

--- a/app/views/shared/_top_page_middle.html.haml
+++ b/app/views/shared/_top_page_middle.html.haml
@@ -22,12 +22,14 @@
           .middle__main__block__item__top
             %h3.middle__main__block__item__top__left
               レディース新着アイテム
-              =link_to tests_product_details_path, class:'middle__main__block__item__top__right' do
+              =link_to "#", class:'middle__main__block__item__top__right' do
                 もっと見る
               %i.fas.fa-chevron-right
 
           .block_area
             = render partial: "show_goods_all", collection: @goods_new_ladies
+            
+      
       .middle__main__block
         .middle__main__block__item
           .middle__main__block__item__top
