--- a/app/assets/stylesheets/_show_goods_all.scss
+++ b/app/assets/stylesheets/_show_goods_all.scss
@@ -4,7 +4,7 @@
   margin: 0 0 20px 10px;
   box-sizing: border-box;
   display: inline-block;
-  position: relative;
+  filter: drop-shadow(3px 3px 3px rgba(171, 168, 168, 0.6));
   &__good-pic_price_box {
     height: 188px;
     width: 188px;
