--- a/app/assets/stylesheets/_top_page_middle.scss
+++ b/app/assets/stylesheets/_top_page_middle.scss
@@ -76,7 +76,7 @@
     margin: 0 auto;
     &__item{
       width: 100%;
-      height:573px;
+      height:600px;
       background-color: rgb(245, 245, 245);
       box-sizing: border-box;
       margin: 0 auto;
@@ -96,6 +96,10 @@
           position: relative;
           box-sizing: border-box;
           margin: 0 auto;
+          &__text-see-more {
+            width: 70px;
+            height: 16px;
+            }
         }
         &__right {
           font-size: 14px;
@@ -110,16 +114,14 @@
           margin: 0 auto;
         }
       .fas.fa-chevron-right {
-          height: 10px;
-      width: 10px;
-      bottom: 0px;
-      content: "";
-      position: absolute;
-      right: 2px;
-      top: 0px;
-      margin-top: 7px;
-      box-sizing: border-box;
-        }
+        height: 24px;
+        width: 91px;
+        bottom: 0px;
+        position: absolute;
+        right: 2px;
+        top: 0px;
+        margin-top: 7px;
+        box-sizing: border-box;
       }
         &__area {
           float:left;
@@ -187,7 +189,9 @@
     cursor: pointer;
     height: 524px;
     width: 1020px;
+    position: relative; bottom: 10px;
     &__text {
       color: #222;
     }
   }
+}
