--- a/app/assets/stylesheets/_purchase-confirmation.scss
+++ b/app/assets/stylesheets/_purchase-confirmation.scss
@@ -97,12 +97,15 @@ main {
                                     font-weight: 600;
                                     margin: 20px auto 20px;
                                     &__left-text{
+                                        float: left;
+                                        width: 100px;
                                         text-align: left;
-                                        display: table-cell;
+                                        // display: table-cell;
                                     }
                                     &__right-text{
+                                        float: right;
                                         font-size: 20px;
-                                        padding-left: 145px;
+                                        // padding-left: 145px;
                                         text-align: right;
                                         display: table-cell;
                                     }
@@ -124,7 +127,7 @@ main {
                                 text-align: center;
                             }
                             #payjp_checkout_box input{
-                                margin: 8px 0 0;
+                                margin: 80px 0 0;
                                 background: #ea352d;
                                 border: 1px solid #ea352d;
                                 color: #fff;
