--- a/app/views/shared/_purchase_completed.html.haml
+++ b/app/views/shared/_purchase_completed.html.haml
@@ -1,7 +1,7 @@
 -# ページのヘッダー部分
 .confirmation-header
   %h1
-    =link_to "#", class: "confirmation-heade__link" do
+    =link_to root_path, class: "confirmation-heade__link" do
       = image_tag '/confirmation-mercarilogo.svg', size: "", alt: "confirmation-mercarilogo" , class: 'confirmation-header__link__mercarilogo'
 
 -# 購入内容詳細
