--- a/app/assets/stylesheets/_devise.scss
+++ b/app/assets/stylesheets/_devise.scss
@@ -177,3 +177,11 @@
   text-decoration: none;
   text-align: left;
 }
+
+.recaptcha-flash-message{
+  width: 100%;
+  background-color: lightcoral;
+
+
+  text-align: center;
+}
