--- a/app/views/signup/step2.html.haml
+++ b/app/views/signup/step2.html.haml
@@ -1,3 +1,7 @@
+-# recaptchaのエラーメッセージ(神山)
+.recaptcha-flash-message
+  = flash[:recaptcha_error]
+
 -# 他cssとの干渉をさけるため、全体をラップする
 .login-header-wrapper
 
