--- a/app/assets/stylesheets/_top_page_middle.scss
+++ b/app/assets/stylesheets/_top_page_middle.scss
@@ -93,12 +93,13 @@
           width: 929px;
           height:33px;
           color: rgb(51, 51, 51);
-          position: relative;
+          position: relative; right: 34px;
           box-sizing: border-box;
           margin: 0 auto;
           &__text-see-more {
             width: 70px;
             height: 16px;
+            position: relative; left: 400px; 
             }
         }
         &__right {
@@ -179,9 +180,12 @@
     }
   }
 
-  .goods_picture_ladies {
+  .goods_images_show {
     height: 188px;
     width: 188px;
+    position: absolute;
+    bottom: 0;
+    z-index: -1;
   }
   .block_area {
     margin: 0 auto;
