--- a/app/views/goods/_show_goods_all.html.haml
+++ b/app/views/goods/_show_goods_all.html.haml
@@ -1,7 +1,7 @@
 .block_area_product
   .block_area_product__good-pic_price_box
     = link_to good_path(show_goods_all.id) do
-      = image_tag show_goods_all.images.first.goods_picture.url, class: "goods_picture_ladies"
+      = image_tag show_goods_all.images.first.goods_picture.url, class: "goods_images_show"
     .block_area_product__good-pic_price_box__price 
       = "¥#{show_goods_all.price}"
   .block_area_product__title
