--- a/app/assets/stylesheets/_show_goods_all.scss
+++ b/app/assets/stylesheets/_show_goods_all.scss
@@ -5,6 +5,14 @@
   box-sizing: border-box;
   display: inline-block;
   filter: drop-shadow(2px 2px 2px rgba(171, 168, 168, 0.6));
+
+  .goods_images_show {
+    height: 187px;
+    width: 188px;
+    position: absolute;
+    bottom: 0;
+    z-index: 1;
+  }
   &__good-pic_price_box {
     height: 188px;
     width: 188px;
@@ -35,8 +43,6 @@
   }
 }
 .block_area_product:hover {
-  // filter: drop-shadow: none;
-  outline: 2px solid #1E90FF;
-  outline-offset: -2px;
-  z-index: 4;
+  outline: 2.2px solid #1E90FF;
+  outline-offset: -2.2px solid #1E90FF;
 }
