--- a/app/assets/stylesheets/_top_page_middle.scss
+++ b/app/assets/stylesheets/_top_page_middle.scss
@@ -76,7 +76,7 @@
     margin: 0 auto;
     &__item{
       width: 100%;
-      height:600px;
+      height: 550px;
       background-color: rgb(245, 245, 245);
       box-sizing: border-box;
       margin: 0 auto;
@@ -97,33 +97,26 @@
           box-sizing: border-box;
           margin: 0 auto;
           &__text-see-more {
-            width: 70px;
-            height: 16px;
-            position: relative; left: 400px; 
-            }
+            font-size: 14px;
+            padding: 5px 0px 5px 5px;
+            color: rgb(0, 149, 238);
+            display: inline-block;
+            font-weight: 600;
+            position: absolute;
+            text-decoration: none;
+            cursor: pointer;
+            right: -50px;
+          }
+          .fas.fa-chevron-right {
+            height: 24px;
+            width: 10px;
+            bottom: 0px;
+            color: rgb(0, 149, 238);
+            position: relative;
+            margin-top: 7px;
+            box-sizing: border-box;
+          }
         }
-        &__right {
-          font-size: 14px;
-          padding: 5px 16px 5px 5px;
-          color: rgb(0, 149, 238);
-          display: block;
-          font-weight: 600;
-          position: relative;
-          text-decoration: none;
-          cursor: pointer;
-          box-sizing: border-box;
-          margin: 0 auto;
-        }
-      .fas.fa-chevron-right {
-        height: 24px;
-        width: 91px;
-        bottom: 0px;
-        position: absolute;
-        right: 2px;
-        top: 0px;
-        margin-top: 7px;
-        box-sizing: border-box;
-      }
         &__area {
           float:left;
           display: flex;
@@ -148,14 +141,13 @@
     }
   }
 
-
   .exhibit_btn {
     cursor: pointer;
     bottom: 32px;
     font-size: 22px;
-    height: 160px;
-    right: 32px;
-    width: 160px;
+    height: 180px;
+    right: 70px;
+    width: 180px;
     position: fixed;
     text-align: center;
     z-index: 2;
@@ -167,25 +159,16 @@
     &__moji {
       margin-top: 35px;
       font-size: 22px;
-
     }
     .fas.fa-camera {
       font-size: 54px;
-        width: 60px;
-        height: 54px;
-        margin-top: 30px;
-        max-height: 100%;
-        display: block;
-        margin: 5px auto 0px;
+      width: 70px;
+      height: 67px;
+      margin-top: 30px;
+      max-height: 100%;
+      display: block;
+      margin: 5px auto 0px;
     }
-  }
-
-  .goods_images_show {
-    height: 188px;
-    width: 188px;
-    position: absolute;
-    bottom: 0;
-    z-index: -1;
   }
   .block_area {
     margin: 0 auto;
