--- a/app/views/shared/_top_page_middle.html.haml
+++ b/app/views/shared/_top_page_middle.html.haml
@@ -90,7 +90,7 @@
         .middle__main__block__item
           .middle__main__block__item__top
             %h3.middle__main__block__item__top__left
-              イヴ・サンローラン
+              イヴ・サンローラン新着アイテム
               =link_to "#", class:'middle__main__block__item__top__left__text-see-more' do
                 もっと見る
                 %i.fas.fa-chevron-right
