--- a/app/views/shared/_top_page_middle.html.haml
+++ b/app/views/shared/_top_page_middle.html.haml
@@ -24,7 +24,7 @@
               レディース新着アイテム
               =link_to "#", class:'middle__main__block__item__top__left__text-see-more' do
                 もっと見る
-                %i.fas.fa-chevron-right
+                %i.fas.fa-chevron-right.middle__main__block__item__top__left__text-see-more__arrow-icon
                 
           .block_area
             = render partial: "show_goods_all", collection: @goods_new_ladies
@@ -36,7 +36,7 @@
               メンズ新着アイテム
               =link_to "#", class:'middle__main__block__item__top__left__text-see-more' do
                 もっと見る
-                %i.fas.fa-chevron-right
+                %i.fas.fa-chevron-right.middle__main__block__item__top__left__text-see-more__arrow-icon
 
           .block_area
             = render partial: "show_goods_all", collection: @goods_new_men       
@@ -48,7 +48,7 @@
               レディース過去のアイテム
               =link_to "#", class:'middle__main__block__item__top__left__text-see-more' do
                 もっと見る
-                %i.fas.fa-chevron-right
+                %i.fas.fa-chevron-right.middle__main__block__item__top__left__text-see-more__arrow-icon
           .block_area
             = render partial: "show_goods_all", collection: @goods_old_ladies
       .middle__main__block
@@ -58,7 +58,7 @@
               メンズ過去のアイテム
               =link_to "#", class:'middle__main__block__item__top__left__text-see-more' do
                 もっと見る
-                %i.fas.fa-chevron-right
+                %i.fas.fa-chevron-right.middle__main__block__item__top__left__text-see-more__arrow-icon
           .block_area
             = render partial: "show_goods_all", collection: @goods_old_men
       .middle__main__category
@@ -82,7 +82,7 @@
               ルイヴィトン新着アイテム
               =link_to "#", class:'middle__main__block__item__top__left__text-see-more' do
                 もっと見る
-                %i.fas.fa-chevron-right
+                %i.fas.fa-chevron-right.middle__main__block__item__top__left__text-see-more__arrow-icon
           .block_area
             = render partial: "show_goods_all", collection: @goods_new_lv
       .middle__main__block
@@ -92,7 +92,7 @@
               イヴ・サンローラン新着アイテム
               =link_to "#", class:'middle__main__block__item__top__left__text-see-more' do
                 もっと見る
-                %i.fas.fa-chevron-right
+                %i.fas.fa-chevron-right.middle__main__block__item__top__left__text-see-more__arrow-icon
           .block_area
             = render partial: "show_goods_all", collection: @goods_new_ysl
       .middle__main__block
@@ -102,7 +102,7 @@
               アディダス新着アイテム
               =link_to "#", class:'middle__main__block__item__top__left__text-see-more' do
                 もっと見る
-                %i.fas.fa-chevron-right
+                %i.fas.fa-chevron-right.middle__main__block__item__top__left__text-see-more__arrow-icon
           .block_area
             = render partial: "show_goods_all", collection: @goods_new_adidas
       .middle__main__block
@@ -113,7 +113,7 @@
 
               =link_to "#", class:'middle__main__block__item__top__left__text-see-more' do
                 もっと見る
-                %i.fas.fa-chevron-right
+                %i.fas.fa-chevron-right.middle__main__block__item__top__left__text-see-more__arrow-icon
           .block_area
             = render partial: "show_goods_all", collection: @goods_new_nike
 
