--- a/app/assets/stylesheets/_profile_sidebar.scss
+++ b/app/assets/stylesheets/_profile_sidebar.scss
@@ -27,6 +27,25 @@
                     color: #ccc;
                 }
             }
+            &__item:hover{
+                box-sizing: border-box;
+                position: relative;
+                display: block;
+                height: 48px;
+                background-color:#eee;
+                padding: 14px;
+                font-size: 14px;
+                color:  #333;
+                border-bottom: solid 1px #eee;
+                text-decoration: none;
+
+                .fa-chevron-right{
+                    position: absolute;
+                    top: 38%;
+                    right: 16px;
+                    color: #ccc;
+                }
+            }
             &__item.active{
                 font-weight: 600;
                 .fa-chevron-right{
