--- a/app/assets/stylesheets/_put_up_goods_on_sale.scss
+++ b/app/assets/stylesheets/_put_up_goods_on_sale.scss
@@ -70,6 +70,16 @@
             text-align: center;
             color: #333;
           }
+          &__text:hover {
+            position: absolute;
+            top: 24px;
+            right:85px;
+            font-size: 16px;
+            font-weight: 600;
+            text-decoration: none;                   
+            text-align: center;
+            color: rgb(133, 109, 109);
+          }
         }
         &__list-right {
           position: relative;
@@ -92,6 +102,18 @@
             text-decoration: none;                   
             text-align: center;
             color: #333;
+          }
+          &__text:hover {
+            position: absolute;
+            top: 24px;
+            right:85px;
+            align-items: center;
+            justify-content: center;
+            font-size: 16px;
+            font-weight: 600;
+            text-decoration: none;                   
+            text-align: center;
+            color: rgb(133, 109, 109)
           }
         }
       }
