--- a/app/views/shared/_main_page_header.html.haml
+++ b/app/views/shared/_main_page_header.html.haml
@@ -1,6 +1,6 @@
 .main-page-header-wrapper
   .header
-    = form_with(class: 'header__main') do |f|
+    = form_with model: @goods, url: search_goods_path, method: :get, class: 'header__main', local: true  do |f|
       .header__upper
         -# メルカリロゴ部分
         .header__upper__left
@@ -10,7 +10,8 @@
         
         -# 検索ボックス部分
         %form.header__upper__right
-          =f.text_field nil, class: 'header__upper__right__in', url: "#", placeholder: "何かお探しですか？" 
+          =f.text_field :keyword, class: 'header__upper__right__in', placeholder: "何かお探しですか？"
+          =f.submit
           %i.fas.fa-search.header__upper__right__icon
 
       -# カテゴリ、ブランドアイコン部分
