--- a/app/views/shared/_main_page_header.html.haml
+++ b/app/views/shared/_main_page_header.html.haml
@@ -11,8 +11,10 @@
         -# 検索ボックス部分
         %form.header__upper__right
           =f.text_field :keyword, class: 'header__upper__right__in', placeholder: "何かお探しですか？"
-          =f.submit
-          %i.fas.fa-search.header__upper__right__icon
+          =button_tag type: 'submit', class: 'fas fa-search header__upper__right__icon' do
+            -# %i.fas.fa-search.header__upper__right__icon
+          -# =f.submit
+          
 
       -# カテゴリ、ブランドアイコン部分
       .header__under
