--- a/app/assets/stylesheets/modules/_flash.scss
+++ b/app/assets/stylesheets/modules/_flash.scss
@@ -1,12 +1,12 @@
 .flash {
   color: $white;
   text-align: center;
-  &__alert{
+  .alert{
     background-color: $alert_orange;
     color: $white;
     text-align: center;
   }
-  &__notice {
+  .notice {
     background-color: $light_blue;
     color: $white;
     text-align: center;
