--- a/app/assets/stylesheets/_search.scss
+++ b/app/assets/stylesheets/_search.scss
@@ -4,7 +4,6 @@
   background-color: white;
   margin: 40px auto 0;
   .search-right {
-    float: right;
     width: 700px;
     height:30px;
     background-color: white;
@@ -37,16 +36,51 @@
     background-color: aqua;
   }
 }
-.block_area {
-  width: 160px;
-  height: 218px;
-  margin: 0 20px 20px 0;
 
+.search-page-middle-wrapper {
+  .middle-search-area {
+    position: relative;
+    min-height: 100%;
+    color: rgb(51, 51, 51);
+    background-color: rgb(245, 245, 245);
+    font-family: Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
+    font-size: 14px;
+    background-color: rgb(255, 255, 255);
+    max-width: 100%;
+    width: 100%;
+    margin: 0px auto;
+    height: 100%;
+.search-middle__main__block {
+  padding: 42px 100px 100px;
+  position: flex;
+  min-height: 100%;
+  color: rgb(51, 51, 51);
+  background-color: white;
+  font-family: Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
+  font-size: 14px;
+  width: 100%;
+  height:615px;
+  box-sizing: border-box;
+  margin: 0 auto;
 
+  &__item{
+    display:  inline-block;
+    width: 100%;
+    height: 550px;
+    background-color: white;
+    box-sizing: border-box;
+    margin: 0 auto;
 
+    &__top {
+      display:  inline-block;
+      height:33px;
+      margin-bottom: 16px;
+      display: flex;
+      box-sizing: border-box;
 
+    }
+  }
 }
-
-
-
+}
+}
 
