--- a/app/assets/stylesheets/_main_page_header.scss
+++ b/app/assets/stylesheets/_main_page_header.scss
@@ -57,21 +57,23 @@
                 padding: 0px 50px 0px 10px;
                 transition: all 0.3s ease-out 0s;
                 font-family: inherit;
+              
               }
               &__icon{
                 text-decoration: none;
                 border-style:none;
                 font-size: 18px;
                 cursor: pointer;
-                position: absolute;
-                top:  24px;
-                left: 1190px;
+                // position: absolute;
+                // top:  24px;
+                // left: 1190px;
                 background-color: transparent;
               }
             }
           }
         &__under{
-            margin: 0 200px;
+            width: 1020px;
+            margin: 0 auto;
             display: flex;
             justify-content: space-between;
             &__left{
