--- a/app/assets/stylesheets/_purchase-confirmation.scss
+++ b/app/assets/stylesheets/_purchase-confirmation.scss
@@ -122,6 +122,7 @@ main {
                                 transition: all ease-out .3s;
                                 cursor: pointer;
                                 text-align: center;
+                                text-decoration: none;
                             }
                             #payjp_checkout_box input{
                                 margin: 8px 0 0;
