--- a/app/views/purchase/done.html.haml
+++ b/app/views/purchase/done.html.haml
@@ -16,7 +16,8 @@
     
     .purchase-completed-wrapper__main-container__result
       .purchase-completed-wrapper__main-container__result__text
-        購入完了しました
+        = link_to "http://localhost:3000/", class:'btn-default btn-gray' do
+          メルカリ一覧へ
     
     -# 商品画像
     .purchase-completed-wrapper__main-container__info
