--- a/app/views/signup/step1.html.haml
+++ b/app/views/signup/step1.html.haml
@@ -49,7 +49,7 @@
             年
             = f.collection_select :birth_month, BirthMonth.all, :name, :name, {include_blank: '未選択'}, {class: 'contents__form__select'}
             月
-            = f.collection_select :birth_day, BirthDay.all, :name, :name, {include_blank: '未選択'}, {class: 'contents__form__select'}
+            = f.collection_select :birth_date, BirthDate.all, :name, :name, {include_blank: '未選択'}, {class: 'contents__form__select'}
             日
           %p.form__info__text ※ 本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。
       
