--- a/app/views/shared/_exhibit.html.haml
+++ b/app/views/shared/_exhibit.html.haml
@@ -136,7 +136,7 @@
         -# submitすることで、DBへデータが入り、トップページに繊維する流れ ys
         = f.submit nil, class: 'btn btn-primary btn-red' , value: "出品する" do
           出品する
-        = link_to "http://localhost:3000/", class:'btn-default btn-gray' do
+        = link_to root_path, class:'btn-default btn-gray' do
           もどる
 
 %footer.confirmation-footer
