--- a/app/views/goods/search.html.haml
+++ b/app/views/goods/search.html.haml
@@ -4,7 +4,7 @@
     .search-conteiner
       .search-right
         .search-right__left-text
-          トランスフォーマー
+          = @keyword
           .search-right__right-text
             の検索結果
       .search-middle__main__block
