--- a/app/assets/stylesheets/_search.scss
+++ b/app/assets/stylesheets/_search.scss
@@ -8,11 +8,12 @@
     height:30px;
     background-color: white;
     color: #333;
+    padding: 30px 0 0 20px;
 
     &__left-text {
       font-size: 22px;
       display: inline-block;
-      margin: 0 0 8px;
+      margin: 0 0 20px;
       font-weight: 600;
     }
 
@@ -59,7 +60,7 @@
       width: 100%;
       height:615px;
       box-sizing: border-box;
-      margin: 0 auto;
+      margin: 20px auto 0;
 
       &__item{
         display:  inline-block;
