--- a/app/views/shared/_product-details.html.haml
+++ b/app/views/shared/_product-details.html.haml
@@ -20,9 +20,8 @@
           %tr
             %th.category 出品者
             %td
-              = link_to "#",  class:"name" do
+              = link_to mypage_path,  class:"name" do
                 = @good.user.username 
-                -# 名前userDB待ち（仮）
               .user-rating
                 .item-user-ratings
                   %i.fas.fa-laugh 
@@ -98,7 +97,7 @@
       -# 今のユーザーIDと
       - if user_signed_in?
         - if current_user.id == @good.user.id 
-          = link_to '#' , class: "item-buy-btn" do
+          = link_to edit_good_path, class: "item-buy-btn" do
             商品の編集
         - else 
           = link_to purchase_path(@good) , class: "item-buy-btn" do
