--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -96,6 +96,6 @@
 
   .buttom
     .buttom__contents
-      =link_to "https://mercari.com/jp/", class:"buttom__contents__btn" do
+      =link_to root_path, class:"buttom__contents__btn" do
         %img{ class:"buttom__contents__btn", alt:"mercarilogo", src:"//www-mercari-jp.akamaized.net/assets/img/common/common/logo-white.svg?2482339763" }
       %span.buttom__contents__name © 2019 Mercari
