--- a/app/assets/stylesheets/_products.scss
+++ b/app/assets/stylesheets/_products.scss
@@ -70,6 +70,11 @@
             color:#0099e8;
             text-decoration: none;
           }
+          .name:hover {
+            color:#b3d4fc;
+            text-decoration: underline;
+
+          }
           .user-rating {
             color: #0099e8;
             .item-user-ratings {
