--- a/app/views/shared/_main_page_header.html.haml
+++ b/app/views/shared/_main_page_header.html.haml
@@ -12,7 +12,7 @@
         .header__upper__right
           %form.header__upper__right__box
             =f.text_field(:keyword, class: 'header__upper__right__box__in', placeholder: "何かお探しですか？")
-            =f.button type: 'submit', class: 'header__upper__right__box__icon' do
+            =f.button :submit, class: 'header__upper__right__box__icon' do
               %i.fas.fa-search
             
 
