--- a/app/views/shared/_mypage_mypage.html.haml
+++ b/app/views/shared/_mypage_mypage.html.haml
@@ -44,9 +44,9 @@
       .mypage_mypage__content__container__container-lists
         - (1..5).each do |i|
           .mypage_mypage__content__container__container-lists__list
-            = image_tag '/goods_sample_1.jpg', size: "", alt: "buy-item-image" , class: 'mypage_mypage__content__container__container-lists__list__image'
+            = image_tag '/mercari-logo.png', size: "", alt: "buy-item-image" , class: 'mypage_mypage__content__container__container-lists__list__image'
             .mypage_mypage__content__container__container-lists__list__text
-              テックエキスパートさん、他３名がいいねしました
+              事務局から個別メッセージ「Goooogleログイン通知」
               %i.fas.fa-chevron-right.mypage_mypage__content__container__container-lists__list__text__icon
       
       -# 購入した商品/取引タブ
