--- a/app/views/goods/search.html.haml
+++ b/app/views/goods/search.html.haml
@@ -16,6 +16,8 @@
     .exhibit_btn__moji
       出品
     %i.fas.fa-camera
+  
+  = paginate @goods
 
 = render 'shared/aside'
 = render 'shared/footer'
