add pagination function

--- a/app/assets/stylesheets/_search.scss
+++ b/app/assets/stylesheets/_search.scss
@@ -38,6 +38,7 @@
 }
 
 .search-page-middle-wrapper {
+  position: relative;
   .middle-search-area {
     position: relative;
     min-height: 100%;
