--- a/app/views/shared/_profile-sidebar.html.haml
+++ b/app/views/shared/_profile-sidebar.html.haml
@@ -35,11 +35,11 @@
           %i.fas.fa-chevron-right
       %li
         %a{href: mypage_purchased_on_deal_path , class: 'mypage-nav__list__item'}
-          出品した商品-取引中
+          購入した商品-取引中
           %i.fas.fa-chevron-right
       %li
         %a{href: '#', class: 'mypage-nav__list__item'}
-          出品した商品-過去の取引
+          購入した商品-過去の取引
           %i.fas.fa-chevron-right
       %li
         %a{href: '#', class: 'mypage-nav__list__item'}
