--- a/app/views/shared/_purchase-confirmation.html.haml
+++ b/app/views/shared/_purchase-confirmation.html.haml
@@ -44,11 +44,11 @@
         %h3 配送先
         %address.confirmation-main__container__buy-info__container__address
           .confirmation-main__container__buy-info__container__address__postal-code 
-            = "〒#{@good.user.address.postalcode}"
+            = "〒#{current_user.address.postalcode}"
           .confirmation-main__container__buy-info__container__address__address-name 
-            = @good.user.address.city
+            = current_user.address.city
           .confirmation-main__container__buy-info__container__address__user-name  
-            = "#{@good.user.address.family_name + @good.user.address.first_name}"
+            = "#{current_user.address.family_name + current_user.address.first_name}"
           =link_to  '#', class: 'confirmation-main__container__buy-info__container__user-info-fix' do
             変更する
             %i.fas.fa-chevron-right
