--- a/app/views/shared/_good_delete.html.haml
+++ b/app/views/shared/_good_delete.html.haml
@@ -39,8 +39,11 @@
             %tr
               %th.category ブランド
               %td
-                = link_to "#",  class:"name" do
-                  = @good.brand.name
+                - if @good.brand.nil?
+                  = ' '
+                - else 
+                  = link_to "#",  class:"name" do
+                    = @good.brand.name
 
             %tr
               %th.category 商品のサイズ
