--- a/app/assets/stylesheets/_products.scss
+++ b/app/assets/stylesheets/_products.scss
@@ -167,5 +167,68 @@
         padding: 8px 16px;
       }
     }
+    .good_option_box {
+      width: 700px;
+      height: 262px;
+      
+      &__edit {
+        a, a:visited, a:hover, a:active {
+          text-decoration: none;
+          color: white;
+        }
+        cursor: pointer;
+        font-size: 24px;
+        display: block;
+        font-weight: 600;
+        margin-top: 16px;
+        background-color: #ea352d;
+        color: white;
+        text-align: center;
+        line-height: 60px;
+        text-decoration: initial;
+        &__text{
+          text-decoration: none;
+          color: #eee;
+        }
+      }
+      &__or {
+        width: 100%;
+        height: 40px;
+        font-size: 22px;
+        text-align: center;
+        line-height: 50px;
+    
+      }
+      &__pause {
+        a, a:visited, a:hover, a:active {
+          text-decoration: none;
+          color: black;
+        }
+        cursor: pointer;
+        font-size: 24px;
+        display: block;
+        font-weight: 600;
+        margin-top: 16px;
+        background-color: #eee;
+        text-align: center;
+        line-height: 60px;
+        color: black;
+      }
+      &__delete {
+        cursor: pointer;
+        font-size: 24px;
+        display: block;
+        font-weight: 600;
+        margin-top: 16px;
+        background-color: #eee;
+        text-align: center;
+        line-height: 60px;
+        color: black;
+      }
+      a, a:visited, a:hover, a:active {
+        text-decoration: none;
+        color: black;
+      }
+    }
   }
 }
