--- a/app/assets/stylesheets/_products.scss
+++ b/app/assets/stylesheets/_products.scss
@@ -118,8 +118,8 @@
       line-height: 60px;
       text-decoration: none;
     }
-    .item-description {
-      padding: 32px 0 0;
+    .buy-item-description {
+      padding: 10px 0;
       font-size: 18px;
       line-height: 1.5;
       &__inner {
