コンテンツ中央寄せ

--- a/app/assets/stylesheets/_good_delete_popup.scss
+++ b/app/assets/stylesheets/_good_delete_popup.scss
@@ -2,9 +2,9 @@
   position: absolute;
   background: #fff;
   width: 700px;
-  margin: 0 auto;
+  margin: auto 0;
   top: 160px;
-  left: 400px;
+  left: 550px;
   &__alert_box{
     background-color: #fff;
     &__head{
