--- a/app/views/shared/_logout.html.haml
+++ b/app/views/shared/_logout.html.haml
@@ -15,6 +15,8 @@
         .logout-contents__logout-box__container__btn-box
           = link_to destroy_user_session_path, method: :delete, class:"logout-contents__logout-box__container__btn-box__btn-red" do
             ログアウト
+          = link_to mypage_signout_path, class:"logout-contents__logout-box__container__btn-box__btn-red" do
+            ログアウト
   
 = render 'shared/aside'
 = render 'shared/footer'
