--- a/app/views/shared/_purchase-confirmation.html.haml
+++ b/app/views/shared/_purchase-confirmation.html.haml
@@ -39,16 +39,17 @@
                 %button.btn 購入する
     
     -# ユーザー情報、配送先
+    - shipping = current_user.address  # 現在のユーザーのアドレステーブル読み出しまでを変数化
     %section.confirmation-main__container__buy-info
       .confirmation-main__container__buy-info__container
         %h3 配送先
         %address.confirmation-main__container__buy-info__container__address
           .confirmation-main__container__buy-info__container__address__postal-code 
-            = "〒#{current_user.address.postalcode}"
+            = "〒#{shipping.postalcode}"
           .confirmation-main__container__buy-info__container__address__address-name 
-            = current_user.address.city
+            = "#{shipping.prefecture.name + shipping.city + shipping.house_number + shipping.building_name}"
           .confirmation-main__container__buy-info__container__address__user-name  
-            = "#{current_user.address.family_name + current_user.address.first_name}"
+            = "#{shipping.family_name + shipping.first_name}"
           =link_to  '#', class: 'confirmation-main__container__buy-info__container__user-info-fix' do
             変更する
             %i.fas.fa-chevron-right
