--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -4,19 +4,19 @@
       %h2.menu1__title メルカリについて
       %ul.menu1__contents
         %li.menu1__contents
-          =link_to "aaa", class:"menu1__contents__name" do
+          =link_to "#", class:"menu1__contents__name" do
             会社概要（運送会社）
         %li.menu1__contents
-          =link_to "aaa", class:"menu1__contents__name" do
+          =link_to "#", class:"menu1__contents__name" do
             採用情報
         %li.menu1__contents
-          =link_to "aaa", class:"menu1__contents__name" do
+          =link_to "#", class:"menu1__contents__name" do
             プレスリリース
         %li.menu1__contents
-          =link_to "aaa", class:"menu1__contents__name" do
+          =link_to "#", class:"menu1__contents__name" do
             公式ブログ
         %li.menu1__contents
-          =link_to "aaa", class:"menu1__contents__name" do
+          =link_to "#", class:"menu1__contents__name" do
             メルカリロゴ利用ガイドライン
         %li.menu1__contents__logo1
           =link_to "https://twitter.com/", class:"menu1__contents__logo1__btn--twitter" do
@@ -29,28 +29,28 @@
       %h2.menu2__title ヘルプ&ガイド
       %ul.menu2__contents
         %li.menu2__contents
-          =link_to "aaa", class:"menu2__contents__name" do
+          =link_to "#", class:"menu2__contents__name" do
             メルカリガイド
         %li.menu2__contents
-          =link_to "aaa", class:"menu2__contents__name" do
+          =link_to "#", class:"menu2__contents__name" do
             らくらくメルカリ便
         %li.menu2__contents
-          =link_to "aaa", class:"menu2__contents__name" do
+          =link_to "#", class:"menu2__contents__name" do
             ゆうゆうメルカリ便
         %li.menu2__contents
-          =link_to "aaa", class:"menu2__contents__name" do
+          =link_to "#", class:"menu2__contents__name" do
             大型メルカリ便
         %li.menu2__contents
-          =link_to "aaa", class:"menu2__contents__name" do
+          =link_to "#", class:"menu2__contents__name" do
             車体取引メルカリ便
         %li.menu2__contents
-          =link_to "aaa", class:"menu2__contents__name" do
+          =link_to "#", class:"menu2__contents__name" do
             メルカリあんしん・あんぜん宣言！
         %li.menu2__contents
-          =link_to "aaa", class:"menu2__contents__name" do
+          =link_to "#", class:"menu2__contents__name" do
             偽ブランド品撲滅への取り組み
         %li.menu2__contents
-          =link_to "aaa", class:"menu2__contents__name" do
+          =link_to "#", class:"menu2__contents__name" do
             メルカリボックス
 
 
@@ -59,39 +59,39 @@
       .menu3__contents
         %ul.menu3__contents__1
           %li.menu3__contents
-            =link_to "aaa", class:"menu3__contents__1__name" do
+            =link_to "#", class:"menu3__contents__1__name" do
               プライバシーポリシー
           %li.menu3__contents
-            =link_to "aaa", class:"menu3__contents__1__name" do
+            =link_to "#", class:"menu3__contents__1__name" do
               メルカリ利用規約
           %li.menu3__contents
-            =link_to "aaa", class:"menu3__contents__1__name" do
+            =link_to "#", class:"menu3__contents__1__name" do
               あんしんスマホサポート制度に関する利用規約
           %li.menu3__contents
-            =link_to "aaa", class:"menu3__contents__1__name" do
+            =link_to "#", class:"menu3__contents__1__name" do
               コンプライアンスポリシー
         %ul.menu3__contents__2
           %li.menu3__contents
-            =link_to "aaa", class:"menu3__contents__2__name" do
+            =link_to "#", class:"menu3__contents__2__name" do
               個人データの安全管理に係るる基本方針
           %li.menu3__contents
-            =link_to "aaa", class:"menu3__contents__2__name" do
+            =link_to "#", class:"menu3__contents__2__name" do
               特定商取引に関する表記
           %li.menu3__contents
-            =link_to "aaa", class:"menu3__contents__2__name" do
+            =link_to "#", class:"menu3__contents__2__name" do
               資金決済法に基づく表示
           %li.menu3__contents
-            =link_to "aaa", class:"menu3__contents__2__name" do
+            =link_to "#", class:"menu3__contents__2__name" do
               法令遵守と犯罪抑止のために
 
     .menu4
       %h2.menu4__title 国
       %ul.menu4__contents
         %li.menu4__contents
-          =link_to "aaa", class:"menu4__contents__name" do
+          =link_to "#", class:"menu4__contents__name" do
             日本
         %li.menu4__contents
-          =link_to "aaa", class:"menu4__contents__name" do
+          =link_to "#", class:"menu4__contents__name" do
             United States
 
   .buttom
